[project]
name = "learndocs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "chromadb>=1.1.1",
    "langchain-experimental>=0.3.4",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.35",
    "markdownify>=1.2.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.1",
    "typer>=0.19.2",
]

[tool.mypy]
strict=true


